# pacioli

./: .env.example  .gitignore  IT_DEPLOYMENT_PREP.txt  README.md  RUNBOOK.md
apps/api/: .env.example  package-lock.json  package.json
apps/api/src/: app.js
apps/web/: index.html  package-lock.json  package.json  vite.config.js
data-pipeline/: .env.example  main_silver_orchestrator.py  pipeline_server.py
data-pipeline/config/: settings.py  settings.yaml
data-pipeline/data_loaders/: __init__.py  banco_loader.py  base_loader.py  databalance_loader.py  diners_club_loader.py  fbl5n_loader.py  guayaquil_loader.py  manual_requests_loader.py  master_data_loader.py  pacificard_loader.py  retenciones_loader.py  sap_239_loader.py  webpos_loader.py
data-pipeline/docs/: architecture.md  architecture_silver.md  data_flow.md  data_flow_silver.md  modules.md  modules_silver.md  pacioli_core.md  reconciliation_engine.md
data-pipeline/pacioli_core/: Cargo.toml  pyproject.toml
data-pipeline/pacioli_core/src/: lib.rs
data-pipeline/scripts/: close_period_and_open_next.py  fix_hash_cache.py  run_historical_ingestion.py
data-pipeline/sql/: biq_auth_schema.sql  biq_config_schema.sql  biq_gold_schema.sql  biq_raw_schema.sql  biq_stg_schema.sql  create_schema.txt
data-pipeline/utils/: data_cleaner.py  db_config.py  excel_normalizer.py  logger.py  metrics_helpers.py  parsers.py  text_normalizer.py
docs/api/: endpoints.md
docs/architecture/: overview.md  pipeline-algorithms.md  rust-core.md
docs/data/: dictionary.md  schemas.md
docs/guide/: pacioli-complete-guide.md
(+230 files in other folders)
